linking GUI to Java

--- a/src/main/resources/ppc1_function_B.fxml
+++ b/src/main/resources/ppc1_function_B.fxml
@@ -48,7 +48,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="581.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.main.java.functionAController">
+<VBox prefHeight="581.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.main.java.functionBController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
